--- a/index.css
+++ b/index.css
@@ -71,7 +71,7 @@ nav {
     display: none;
     font-family: "Lato";
     /* background-color: #fca72d; */
-    background-color: rgba(252, 167, 45, 0.60);
+    background-color: rgb(226, 191, 120);
     z-index: 5;
     position: fixed;
     top: 4.5em;
@@ -82,6 +82,10 @@ nav {
 
 .drop-activate_über, .drop-activate_fach {
     display: block;
+}
+
+.drop-item {
+    list-style: none;
 }
 
 .drop-item a {
@@ -278,4 +282,10 @@ nav {
 
 .carousel_indicator.current_slide {
     background-color: rgb(252, 167, 45);
+}
+
+.footer {
+    width: 100%;
+    height: 20em;
+    background-color: #fca72d;
 }
