--- a/index.css
+++ b/index.css
@@ -35,12 +35,14 @@ nav {
     letter-spacing: 5px;
     font-size: 30px;
     text-align: center;
+    font-weight: bold;
 }
 
 .sub-logo {
     font-size: 14px;
     letter-spacing: 2.5px;
     text-align: center;
+    font-weight: bold;
 }
 
 .sub-logo_invi {
@@ -234,9 +236,10 @@ nav {
     width: 8em;
     height: 3.5em;
     background-color: #fca72d;
-    color: black;
+    color: rgb(29, 21, 14);
     text-transform: uppercase;
     margin-top: 30px;
+    font-weight: bold;
 }
 
 .carousel_button {
@@ -288,4 +291,24 @@ nav {
     width: 100%;
     height: 20em;
     background-color: #fca72d;
+}
+
+.footer-kontakt {
+    display: block;
+}
+
+.footer-list {
+    display: block;
+}
+
+.table {
+    margin: 0 auto;
+    padding: 4em;
+}
+
+.square {
+    width: 10em;
+    height: 10em;
+    background-color: rgb(73, 187, 187);
+    border: 1em;
 }
