--- a/index.css
+++ b/index.css
@@ -144,6 +144,10 @@ nav {
         display: block;
         cursor: pointer;
     }
+
+    .footer-col {
+        flex-direction: column;
+    }
 }
 
 .nav_active {
@@ -287,31 +291,19 @@ nav {
     background-color: rgb(252, 167, 45);
 }
 
-.footer {
-    width: 100%;
-    height: 20em;
-    background-color: #fca72d;
-}
-
-.footer-kontakt {
-    display: block;
-}
-
-.footer-list {
-    display: block;
-}
-
 .table-section {
     margin: 0 auto;
     padding: 4em;
     display: table;
+    text-align: center;
 }
 
 .first-row {
-    width: 13em;
-    height: 13em;
-    background-color: rgb(73, 187, 187);
-    border: solid white .5em;
+    width: 14em;
+    height: 14em;
+    line-height: 13em;
+    background-color: rgb(56, 150, 150);
+    border: solid white .75em;
     display: table-cell;
 }
 
@@ -323,10 +315,11 @@ nav {
 }
 
 .sec-row {
-    width: 13em;
-    height: 13em;
-    background-color: rgb(73, 187, 187);
-    border: solid white .5em;;
+    width: 14em;
+    height: 14em;
+    line-height: 13em;
+    background-color: rgb(56, 150, 150);
+    border: solid white .75em;;
     display: table-cell;
 }
 
@@ -335,4 +328,40 @@ nav {
     color: white;
     font-size: 1.5em;
     text-decoration: none;
+}
+
+.footer {
+    width: 100%;
+    height: 20em;
+    background-color: #fca72d;
+}
+
+.footer-col {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    /* flex-direction: row; */
+}
+
+.footer-kontakt {
+    display: block;
+    text-align: center;
+    /* width: 50%; */
+}
+
+.footer-list {
+    display: block;
+    text-align: center;
+    /* width: 50%; */
+}
+
+.footer-list li {
+    list-style: none;
+}
+
+.footer-list a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.15em;
+    font-weight: bold;
 }
