--- a/index.css
+++ b/index.css
@@ -340,17 +340,18 @@ nav {
     width: 80%;
     margin: 0 auto;
     display: flex;
+    padding-top: 2em;
     /* flex-direction: row; */
 }
 
 .footer-kontakt {
-    display: block;
+    width: 50%;
     text-align: center;
     /* width: 50%; */
 }
 
 .footer-list {
-    display: block;
+    width: 50%;
     text-align: center;
     /* width: 50%; */
 }
@@ -364,4 +365,16 @@ nav {
     color: white;
     font-size: 1.15em;
     font-weight: bold;
+}
+
+.bottom {
+    width: 100%;
+    text-align: center;
+    background-color: #fca72d;
+}
+
+.bottom p {
+    margin: 0;
+    font-size: 0.75em;
+    padding: 1em;
 }
