--- a/index.css
+++ b/index.css
@@ -294,6 +294,15 @@ nav {
     text-decoration: none;
 }
 
+.video {
+    margin-bottom: 4em;
+}
+
+.video iframe {
+    display: block;
+    margin: 0 auto;
+}
+
 .footer {
     width: 100%;
     height: 20em;
@@ -439,6 +448,10 @@ nav {
     .slide-text h4 {
         font-family: Montserrat;
         font-size: 1em;
+    }
+
+    .video iframe {
+        width: 80%;
     }
 
     .footer-col {
